# 6-AxisRobotArm-VLA

./: .gitignore  AGENTS.md  Note.md  Plan.md  README.md
src/robot_arm_demo/: CMakeLists.txt  package.xml
src/robot_arm_demo/config/: controllers.yaml
src/robot_arm_demo/launch/: display.launch.py  gazebo.launch.py
src/robot_arm_demo/rviz/: urdf.rviz
src/robot_arm_demo/src/: add_obstacles.cpp  kinematics_solver.cpp
src/robot_arm_demo/urdf/: 6_axis_arm.urdf  6_axis_arm.urdf.xacro
src/robot_arm_moveit_config/: CMakeLists.txt  package.xml
src/robot_arm_moveit_config/config/: 6_axis_arm.srdf  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml
src/robot_arm_moveit_config/launch/: move_group.launch.py  moveit_rviz.launch.py
vla/: README.md  action_mapper_node.py  check_env.py  infer_once.py  preprocess_image.py  vla_action_node.py
vla/data/raw/: README.md
