<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
  package.xml

  ROS2 软件包清单文件。
-->
<package format="3">
  <name>robot_arm_moveit_config</name>
  <version>0.0.0</version>
  <description>MoveIt2 configuration for 6-axis robot arm</description>
  <maintainer email="cen@example.com">cen</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_arm_demo</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
